[package]
name = "tonswap-pair"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
eint = "0.1.6"
malachite-nz = "0.2.2"
malachite-base = "0.2.2"

num-bigint = "0.4.3"

[dev-dependencies]
anyhow = "1.0.56"
criterion = "0.3.5"

nekoton-abi = { git = "https://github.com/broxus/nekoton.git", features = ["nekoton-derive"] }
nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }
nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }

serde_json = "1.0.79"
ton_abi = { git = "https://github.com/broxus/ton-labs-abi.git" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }

[[bench]]
name = "speed"
harness = false