[package]
name = "flatqube-pair"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
eint = "1.0.0"
malachite-nz = "0.3.0"
malachite-base = "0.3.0"
anyhow = "1.0.38"

[dev-dependencies]
anyhow = "1.0.56"
criterion = "0.4.0"
hex = "0.4.3"


nekoton-abi = { git = "https://github.com/broxus/nekoton.git", features = ["nekoton-derive"] }
nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }
nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }

serde_json = "1.0.79"
ton_abi = { git = "https://github.com/broxus/ton-labs-abi.git" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }

[[bench]]
name = "speed"
harness = false

[[bench]]
name = "speed_stable"
harness = false
